--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="styles.css">
-	<script src="script.js" defer></script>
+	<link rel="stylesheet" href="/css/styles.css">
+	<script src="/js/script.js"  type="module" defer></script>
 	<title>Restaurant Page</title>
 </head>
 
